--- a/index.html
+++ b/index.html
@@ -10,13 +10,30 @@
 </head>
 
 <body>
-  <ul id="slides" class="slides">
-    <li class="slide active">Slide 1</li>
-    <li class="slide">Slide 2</li>
-    <li class="slide">Slide 3</li>
-    <li class="slide">Slide 4</li>
-    <li class="slide">Slide 5</li>
-  </ul>
+  <div class="carousel">
+    <ul id="slides" class="slides">
+      <li class="slide active">Slide 1</li>
+      <li class="slide">Slide 2</li>
+      <li class="slide">Slide 3</li>
+      <li class="slide">Slide 4</li>
+      <li class="slide">Slide 5</li>
+    </ul>
+
+    <div class="indicators" id="indicators">
+      <div class="indicator">1</div>
+      <div class="indicator">2</div>
+      <div class="indicator">3</div>
+      <div class="indicator">4</div>
+      <div class="indicator">5</div>
+    </div>
+
+    <div class="controls" id="controls">
+      <span class="control" id="pause-btn">Pause</span>
+      <span class="control" id="prev-btn">Prev</span>
+      <span class="control" id="next-btn">Next</span>
+    </div>
+  </div>
+
   <script src="https://kit.fontawesome.com/0c77992a6c.js" crossorigin="anonymous"></script>
   <script src="assets/js/main.js"></script>
 </body>
