add functionality for pause-play button

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </div>
 
     <div class="controls" id="controls">
-      <span class="control" id="pause-btn">Pause</span>
+      <span class="control" id="pause_play-btn">Pause</span>
       <span class="control" id="prev-btn">Prev</span>
       <span class="control" id="next-btn">Next</span>
     </div>
