--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </ul>
 
     <div class="indicators" id="indicators">
-      <div class="indicator">1</div>
+      <div class="indicator active">1</div>
       <div class="indicator">2</div>
       <div class="indicator">3</div>
       <div class="indicator">4</div>
