--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
     </ul>
 
     <div class="indicators" id="indicators">
-      <div class="indicator active">1</div>
-      <div class="indicator">2</div>
-      <div class="indicator">3</div>
-      <div class="indicator">4</div>
-      <div class="indicator">5</div>
+      <div class="indicator active" data-slide-to="0"></div>
+      <div class="indicator" data-slide-to="1"></div>
+      <div class="indicator" data-slide-to="2"></div>
+      <div class="indicator" data-slide-to="3"></div>
+      <div class="indicator" data-slide-to="4"></div>
     </div>
 
     <div class="controls" id="controls">
