--- a/index.html
+++ b/index.html
@@ -28,13 +28,20 @@
     </div>
 
     <div class="controls" id="controls">
-      <span class="control" id="pause_play-btn">Pause</span>
-      <span class="control" id="prev-btn">Prev</span>
-      <span class="control" id="next-btn">Next</span>
+      <span class="control" id="pause_play-btn">
+        <i class="fa-solid fa-circle-pause"></i>
+      </span>
+      <span class="control" id="prev-btn">
+        <i class="fa-solid fa-angle-left"></i>
+      </span>
+      <span class="control" id="next-btn">
+        <i class="fa-solid fa-angle-right"></i>
+      </span>
     </div>
   </div>
 
-  <script src="https://kit.fontawesome.com/0c77992a6c.js" crossorigin="anonymous"></script>
+  <!-- <script src="https://kit.fontawesome.com/0c77992a6c.js" crossorigin="anonymous"></script> -->
+  <script src="https://kit.fontawesome.com/86c413b436.js" crossorigin="anonymous"></script>
   <script src="assets/js/main.js"></script>
 </body>
 
