added reverse button

--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
       <span class="control" id="next-btn">
         <i class="fa-solid fa-angle-right"></i>
       </span>
+      <span class="control" id="reverse-btn">
+        <i class="fa-solid fa-arrow-rotate-left"></i>
+      </span>
     </div>
   </div>
 
